# frameshift

./: .gitignore  Justfile  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml
src/frameshift/: config.py
src/frameshift/cli/: app.py
src/frameshift/discovery/: scanner.py
src/frameshift/models/: library.py  media_file.py  parsed_media.py  series.py
src/frameshift/parser/: filename.py  media_parser.py
src/frameshift/persistence/: database.py  media_repository.py
src/frameshift/ui/: console.py
tests/: test_filename_parser.py
tests/discovery/: test_scanner.py
